Fix duck alignment

--- a/src/sass/portfolio_page/intro.scss
+++ b/src/sass/portfolio_page/intro.scss
@@ -32,7 +32,11 @@
 }
 
 .portfolio-intro-duck {
-  width: 100%;
-  height: auto;
-  font-family: 'Just Another Hand', cursive;
+  display: flex;
+  align-items: center;
+  > svg {
+    width: 100%;
+    height: auto;
+    font-family: 'Just Another Hand', cursive;
+  }
 }
